[gd_scene load_steps=6 format=3 uid="uid://do5hlysvqhpvp"]

[ext_resource type="Script" path="res://Objects/Figure/Figure.gd" id="1_ytkgx"]

[sub_resource type="Animation" id="Animation_hnyy6"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_73va8"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qte7q"]
_data = {
"fade_in": SubResource("Animation_hnyy6"),
"fade_out": SubResource("Animation_73va8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lak6u"]
radius = 448.286

[node name="Figure" type="Node2D"]
script = ExtResource("1_ytkgx")

[node name="ColorRect_Animation" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer_Fade" type="AnimationPlayer" parent="ColorRect_Animation"]
libraries = {
"": SubResource("AnimationLibrary_qte7q")
}

[node name="trigger_Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="trigger_CollisionShape2D" type="CollisionShape2D" parent="trigger_Area2D"]
shape = SubResource("CircleShape2D_lak6u")

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, 64)

[connection signal="body_entered" from="trigger_Area2D" to="." method="_on_trigger_area_2d_body_entered"]
